fix mobile spacing issues causing stretching beyond main container
git-svn-id: https://github.com/J0hn1975/elixir_newbie_website.git@85 b1343c55-5d13-cc01-28ab-ce57b7db7bff

--- a/trunk/assets/css/app.css
+++ b/trunk/assets/css/app.css
@@ -18,6 +18,7 @@ body {
   padding: 0;
   margin: 0;
   font-family: "Roboto", sans-serif;
+  -webkit-tap-highlight-color: transparent;
 }
 
 /* Alerts and form errors used by phx.new */
